Tentativa de resolução das questões 2 e 3 da lista 2.

--- a/L2.qmd
+++ b/L2.qmd
@@ -10,10 +10,10 @@ format:
 
 
 
-## Apresentação
+# Apresentação
 O presente documento visa trazer as resoluções da segunda lista de exercícios da disciplina **MATD64 - Controle Estatístico de Processos (CEP)**, trabalhando com os gráficos de controle de *Shewhart* a fim de se identificar as condições dos processos baseados nas amostras disponibilizadas nos bancos de dados fornecidos e problemas propostos.
 
-### Exercício 1. 
+## Exercício 1. 
 O diâmetro de um parafuso de aço é um parâmetro importante da qualidade. Dados sobre o diâmetro (em milímetros, mm) são apresentados para 25 amostras de 9 parafusos cada (ver arquivo parafusos.xls).
 
 a. Construa gráficos de controle apropriados para esse processo.
@@ -31,7 +31,7 @@ parafusos <- readxl::read_xls('parafusos.xls')
 
 ```
 
-#### Item 1a.
+### Item 1a.
 Em reposta ao **item a** da primeira questão da lista, seguem os gráficos de amplitude (R) e da média ($\bar{X}$)
 
 ```{r Q1}
@@ -42,20 +42,20 @@ Em reposta ao **item a** da primeira questão da lista, seguem os gráficos de a
 #| error: false
 #| message: false
 
-
-
 parafusos|>
   qcc::qcc(type = "R", plot = F)|>
-  plot(label.limits = c("LIC", "LSC"), title = "Gráfico de Amplitudes dos parafusos")
+  plot(label.limits = c("LIC", "LSC"), 
+       title = "Gráfico de Amplitudes dos parafusos",
+       xlab = "Amostras", ylab = "Resumo das Estatísticas das Amostras")
 
 parafusos|>
   qcc::qcc(type = "xbar", plot = F)|>
-  plot(label.limits = c("LIC", "LC", "LSC"), 
+  plot(label.limits = c("LIC", "LSC"), 
        title = "Gráfico das Médias dos parafusos",
        xlab = "Amostras", ylab = "Resumo das Estatísticas das Amostras")
 ```
 
-#### Item 1b.
+### Item 1b.
 Examinando o controle estatístico, com base nas [Regras Sensibilizantes **(Regras de Nelson - 1984)**](https://www.ermontoro.com/post/2018/09/05/regras-para-avaliar-cartas-de-controle-cep), é possível constatar:
 
 - Gráfico R:
@@ -69,17 +69,314 @@ Examinando o controle estatístico, com base nas [Regras Sensibilizantes **(Regr
   - Violação ao Teste 3:
       - 6 pontos sucessivos em ordem crescente.
 
-### Exercício 2.
+## Exercício 2.
 Uma empresa quer monitorar a quantidade (em mililitros, ml) de suco presente nas garrafas que comercializa. Para tanto, selecionou 20 amostras de tamanho 5. Sejam os valores de referência: $\mu$ = 500 ml e $\sigma$ = 0,5 ml. Construa gráficos de controle para a média e a variabilidade da
 quantidade de suco nas garrafas, considerando e também desconsiderando as especificações. Compare os gráficos obtidos segundo estas duas abordagens e, em seguida, conclua.
+
+**SOLUÇÃO:**
+
+Tendo em vista a pequena quantidade de observações por amostra, o gráfico mais recomendado é o **Gráfico R** para análise solicitada.
+
+Não sendo identificado nenhum alarme falso nem no gráfico R nem no gráfico $\bar{X}$, foi construída a Figura 2 com os gráficos sem especificações, sendo estes gráficos equivalentes aos gráficos com especificações, exceto pelas pequenas mudanças listadas na Tabela 1.
 
 
 ```{r}
 #| echo: false
+#| warning: false
+#| fig-width: 9
+#| fig-height: 7
 
+
+xR1=function(m,n,y,mi,sigma){
+  if (n>1) {
+    amplit=numeric(m)
+    mat=matrix(y,m,n,byrow=T)
+    media=apply(mat,1,mean)
+    for (i in 1:m) {
+      amplit[i]=max(mat[i,])-min(mat[i,])
+    }
+  } else {
+    amplit=numeric(m-1)
+    media=y
+    for (i in 2:m) amplit[i-1]=sqrt((y[i]-y[i-1])^2)
+  }
+  d2=c(1.1296,1.6918,2.0535,2.3248,2.5404,2.7074,
+       2.8501,2.9677,3.0737,3.1696)
+  d3=c(.8541,.8909,.8800,.8674,.8508,
+       .8326,.8209,.8102,.7978,.7890)
+  LIC1=mi-3*sigma/sqrt(n)
+  LSC1=mi+3*sigma/sqrt(n)
+  if(n>1) {
+    LIC2=d2[n-1]*sigma-3*d3[n-1]*sigma
+    LSC2=d2[n-1]*sigma+3*d3[n-1]*sigma
+    if (LIC2 < 0) LIC2=0
+  } else {
+    LIC2=d2[n]*sigma-3*d3[n]*sigma
+    LSC2=d2[n]*sigma+3*d3[n]*sigma
+    if (LIC2 < 0) LIC2=0
+  }
+  par(mfrow=c(2,1))
+  amostra1=matrix(rep(seq(1,m),4),m,4,byrow=F)
+  if (n>1) amostra2=amostra1 else amostra2=amostra1[-1,]
+  xbar=cbind(rep(mi,m),rep(LIC1,m),rep(LSC1,m),media)
+  if (n>1) {
+    rbar=cbind(rep(sigma,m),rep(LIC2,m),rep(LSC2,m),amplit)
+  } else rbar=cbind(rep(sigma,m-1),rep(LIC2,m-1),
+                    rep(LSC2,m-1),amplit)
+  # matplot(amostra2,rbar,type="o",ylab="Amplitude",
+  #         col=c("black","red","red","blue"),
+  #         ylim=c(min(rbar),max(rbar)),
+  #         xlab="Amostras",main="Gráfico R",pch=20, lty=1, lwd=2)
+  # matplot(amostra1,xbar,type="o",ylab="Média",xlab="Amostras",
+  #         main=expression(paste("Gráfico " *
+  #                                 bar(x))),col=c("black","red","red",
+  #                                                "blue"),ylim=c(min(xbar),max(xbar)),pch=20, lty=1, lwd=2)
+
+  
+  out <<-  rbind(round(rbar[1, 1:3], 2), round(xbar[1, 1:3], 2))
+  colnames(out) <<- c("Referência", "LIC", "LSC")
+  rownames(out) <<- c("R", "Xbarra")
+}
+
+xR2=function(m,n,y){
+  if (n>1) {
+    amplit=numeric(m) 	
+    mat=matrix(y,m,n,byrow=T)
+    media=apply(mat,1,mean)
+    for (i in 1:m) amplit[i]=max(mat[i,])-min(mat[i,])
+    x2barras=mean(media)
+    Rbarra=mean(amplit) 
+    d2=c(1.1296,1.6918,2.0535,2.3248,2.5404,2.7074,2.8501,
+         2.9677,3.0737,3.1696)
+    d3=c(.8541,.8909,.8800,.8674,.8508,.8326,.8209,
+         .8102,.7978,.7890)
+    LIC1=x2barras-3*Rbarra/(d2[n-1]*sqrt(n))
+    LSC1=x2barras+3*Rbarra/(d2[n-1]*sqrt(n))
+    LIC2=Rbarra-3*d3[n-1]*Rbarra/d2[n-1]
+    LSC2=Rbarra+3*d3[n-1]*Rbarra/d2[n-1]
+    if (LIC2 < 0) LIC2=0
+    
+  } else {
+    amplit=numeric(m-1)
+    media=y
+    for (i in 2:m) amplit[i-1]=sqrt((y[i]-y[i-1])^2)
+    x2barras=mean(media)
+    Rbarra=mean(amplit) 
+    d2=1.1296
+    d3=.8541
+    LIC1=x2barras-3*Rbarra/(d2*sqrt(n))
+    LSC1=x2barras+3*Rbarra/(d2*sqrt(n))
+    LIC2=Rbarra-3*d3*Rbarra/d2
+    LSC2=Rbarra+3*d3*Rbarra/d2
+    if (LIC2 < 0) LIC2=0
+  }
+  par(mfrow=c(2,1))
+  amostra1=matrix(rep(seq(1,m),4),m,4,byrow=F)
+  if (n>1) amostra2=amostra1 else amostra2=amostra1[-1,]
+  xbar=cbind(rep(x2barras,m),rep(LIC1,m),rep(LSC1,m),media)
+  if (n>1) {
+    rbar=cbind(rep(Rbarra,m),rep(LIC2,m),rep(LSC2,m),amplit) 
+  } else rbar=cbind(rep(Rbarra,m-1),rep(LIC2,m-1),
+                    rep(LSC2,m-1),amplit)
+  matplot(amostra2,rbar,type="o",ylab="Amplitude",
+          col=c("black","red","red","blue"),
+          ylim=c(min(rbar),max(rbar)),
+          xlab="Amostras",main="Gráico R",pch=20, lty=1, lwd=2)
+  matplot(amostra1,xbar,type="o",ylab="Média",xlab="Amostras",
+          main=expression(paste("Gráfico " * bar(x))),col=c("black","red","red",
+                                                            "blue"),ylim=c(min(xbar),max(xbar)),pch=20, lty=1, lwd=2)
+  
+  out <<-  rbind(round(rbar[1, 1:3], 2), round(xbar[1, 1:3], 2))
+  colnames(out) <<- c("Referência", "LIC", "LSC")
+  rownames(out) <<- c("R", "Xbarra")
+}
+
+
+## Q2 ----
+
+m=20; n=5; mn=m*n; mi=500; sigma=1; set.seed(2453); x=round(rnorm(mn,mi,sigma),1)
+
+xR1(m, n, x, 500, 1)
+
+result <- t(out)
+
+xR2(m,n,x)
+
+result <- cbind(result, t(out))
+
+rownames(result) <- c("Linha Central", "LIC", "LSC")
+
+
+# Tabela ----
+tit = htmltools::withTags(table(
+  class = 'display',
+  thead(
+    tr(
+      th(colspan = 1, ''),
+      th(colspan = 2, 'Com Especificações'),
+      th(colspan = 2, 'Sem Especificações')
+      # th(colspan = 2, 'Petal')
+    ),
+    tr(
+      lapply(rep(c('', 'R', "Xbarra", "R", "Xbarra"), 1), th)
+    )
+  )
+))
+
+result|>
+  DT::datatable(
+    caption = "Tabela 1: Informações dos gráficos R e Xbarra para Questão 2.",
+    colnames = c("R", "Xbarra", "R", "Xbarra"),
+    extensions = 'FixedHeader', container = tit,
+    options = list(dom = 't', fixedHeader = F, autoWidth = F,
+                   columnDefs = 
+                     list(
+                       list(className = 'dt-center', targets = c(1:4))))
+  )|>
+  DT::formatRound(
+    columns = c(1:4),
+    digits = 2, mark = ".",
+    dec.mark = ",")
 
 
 
 ```
+
+
+## Exercício 3. 
+
+Uma empresa deseja monitorar a pressão tolerada pelas garrafas plásticas que comercializa, visando identificar se dispõe de condições para manter um padrão de qualidade que não se altera ao longo do tempo. Para isso, utiliza 25 amostras de tamanho 14. A empresa deseja saber se todas as garrafas plásticas suportam a mesma pressão média e se a variabilidade da pressãotolerada por tais garrafas é a mesma para todos os lotes comercializados. Além disso, há interesse no monitoramento da produção futura.
+
+**SOLUÇÃO:**
+
+Tendo em vista que a quantidade de observações por amostra é maior que 10, o gráfico **Gráfico S** é o mais recomendado para análise solicitada.
+
+
+
+```{r}
+#| echo: false
+#| warning: false
+#| fig-width: 9
+#| fig-height: 7
+
+xS2=function(m,n,y){
+  if (length(n)==1) n=rep(n,m)
+  mat=matrix(NA,m,max(n)); k=1 
+  for (i in 1:m) {
+    for (j in 1:n[i]) {
+      mat[i,j]=y[k]
+      k=k+1
+    }
+  }
+  media=apply(mat,1,mean,na.rm=T)
+  desviop=apply(mat,1,sd,na.rm=T)
+  x2barras=sum(n*media)/sum(n)
+  Sbarra=sqrt(sum((n-1)*desviop^2)/(sum(n)-m))
+  LIC1=numeric(m)
+  LSC1=numeric(m)
+  LIC2=numeric(m)
+  LSC2=numeric(m)
+  c4=0	
+  for (i in 1:m){ 
+    c4=(gamma(n[i]/2)/gamma((n[i]-1)/2))*sqrt(2/(n[i]-1))
+    LIC1[i]=x2barras-3*Sbarra/(c4*sqrt(n[i]))
+    LSC1[i]=x2barras+3*Sbarra/(c4*sqrt(n[i]))
+    LIC2[i]=Sbarra-3*Sbarra*sqrt((1-c4^2))/c4
+    LSC2[i]=Sbarra+3*Sbarra*sqrt((1-c4^2))/c4
+    if (LIC2[i] < 0) LIC2[i]=0
+  }
+  amostra=matrix(rep(seq(1,m),4),m,4,byrow=F)
+  xbar=cbind(rep(x2barras,m),LIC1,LSC1,media)
+  rbar=cbind(rep(Sbarra,m),LIC2,LSC2,desviop)
+  par(mfrow=c(2,1))
+  matplot(amostra, rbar, type="o", ylab= "Desvio-Padrão",
+          col=c("black","red","red","blue"),
+          ylim=c(min(rbar),max(rbar)),
+          xlab="Amostras", main="Gráfico S", pch=20, lty=1, lwd=2)
+  matplot(amostra,xbar,type="o", ylab= "Média", xlab= "Amostras",
+          main=expression(paste("Gráfico " * bar(x))), 
+          col=c("black","red","red","blue"),
+          ylim=c(min(xbar),max(xbar)),pch=20, lty=1, lwd=2)
+}
+
+
+m=25; n=14; mn=m*n; mi=150; sigma=10; set.seed(4125); x=round(rnorm(mn,mi,sigma),2); x[155:168]=x[155:168]-1.5*sigma; x=round(x,0)
+
+xS2(m, n, x)
+
+
+
+```
+
+
+
+
+
+
+
+## Exercício 4.
+
+Uma empresa de fast-food deseja verificar se o tempo demandado a partir do momento da solicitação até o momento em que o pedido é entregue é uma variável com média sob
+controle. Em outras palavras, a empresa deseja saber se o tempo médio até que seja feita a entrega é o mesmo para qualquer um de seus clientes ou se, dependendo do momento em que é feito o pedido, esse tempo é maior. São observados os tempos de entrega (em segundos, s) dos pedidos para os últimos 30 clientes atendidos pela empresa.
+
+a) O tempo de entrega do pedido segue distribuição normal?
+b) Construa gráficos de controle e analise-os. Caso não exibam controle estatístico, revise os limites de controle tentativos.
+
+
+
+
+
+
+## Exercício 5. 
+
+Amostras de tamanhos variáveis (n entre 5 e 8) são extraídas de um processo manufatureiro a cada hora. Uma característica de qualidade (normalmente distribuída) é medida para 25 amostras coletadas.
+
+a) Construa gráficos de controle usando esses dados. O processo está sob controle estatístico?
+b) Supondo que tenha sido identificada uma causa responsável pela falta de controle pontual das amostras identificadas no item anterior, refaça a análise sem tais amostras e descubra se há mais sinais de descontrole do processo.
+
+
+
+
+## Exercício 6.
+
+(Cano et al., 2012) In the construction of a building, a critical to quality (CTQ)
+characteristic might be the fulfillment of a deadline, as unfulfillment can lead to failure. The Six Sigma team identified the following events that can cause a delay in the schedule: weather, errors in planning, delay of suppliers, inadequate operators, customer specifications/delays, defects in materials, and permissions.
+
+Create a cause-and-effect diagram such that:
+
+Effect: “Delay” \   
+Groups: “Personnel”, “Weather”, “Suppliers”, “Planning” \   
+Causes[1]: “Training”, “Inadequate” \   
+Causes[2]: “Rain”, “Temperature”, “Wind”\   
+Causes[3]: “Materials”, “Delays”, “Rework”\   
+Causes[4]: “Customer”, “Permissions”, “Errors”\   
+
+
+
+
+
+
+
+
+
+
+## Exercício 7. 
+
+(Cano et al., 2012) The Black Belt in the construction company of the previous
+example has investigated why a sampling of deadlines on projects developed in the last 2 years went unfulfilled. He has also estimated the cost of these delays for the company (larger labor force, extra payments, etc.). The number of unfulfilled deadlines and estimated cost are:
+
+Count: 5, 1, 3, 1, 2, 18, 20, 4, 15, 2, 4\    
+Cost: 50, 150, 50, 10, 20, 180, 200, 10, 5, 20, 150
+
+a) Plot a Pareto chart by number of defects.
+b) Plot the chart for cost of error.
+c) Select the causes you must focus on to improve the construction process. Can you select them from only one of the charts?
+
+
+
+
+
+
+
 
 
