--- a/L5.qmd
+++ b/L5.qmd
@@ -4,13 +4,24 @@ author: "Fernando Bispo"
 format: 
     html:
       toc: true
+      toc-location: right
       toc-title: Índice
       toc-depth: 4
+      code-fold: true
+      code-summary: "Mostrar Código"
+      code-overflow: wrap
+      code-tools:
+        source: false
+        toggle: true
+      code-block-bg: true
+      code-block-border-left: "#31BAE9"
+      code-copy: true
 ---
 
 ```{r pacotes&dados}
 #| echo: false
 #| warning: false
+
 
 if(!require("pacman"))install.packages("pacman")
 
@@ -27,54 +38,33 @@ parafusos <- readxl::read_xls('parafusos.xls')
 Resolução da Lista 5.
 
 ## Exercício 1
+
 Em uma fábrica de sapatos, 200 pares são analisados diariamente. Nos 25 dias úteis de um mês
 foram registrados os números de pares defeituosos mostrados na tabela abaixo.
 
-```{r tabQ1}
-#| echo: false
-#| warning: false
-
-# dia = c(1:25)
-# x=c(9, 11, 14, 9, 16, 11, 10, 12, 5, 10, 9, 11, 7, 9, 22, 11, 8, 11, 9, 7, 9, 8, 12)
-# 
-# cbind(dia, x)|>
-#     DT::datatable(
-#     # caption = "Tabela 1: Informações dos gráficos R e Xbarra para Questão 2.",
-#     colnames = c("R", "Xbarra", "R", "Xbarra"),
-#     extensions = 'FixedHeader', 
-#     # container = tit,
-#     options = list(dom = 't', fixedHeader = F, autoWidth = F,
-#                    columnDefs = 
-#                      list(
-#                        list(className = 'dt-center', targets = c(1:4))))
-#   )|>
-#   DT::formatRound(
-#     columns = c(1:4),
-#     digits = 2, mark = ".",
-#     dec.mark = ",")
-
-```
 
 a) Estabeleça um gráfico de controle para monitorar a produção futura. Considere 𝑝 = 0,05.
 b) Qual o menor tamanho de amostra que pode ser usado para esse processo e ainda fornecer um
 limite inferior de controle positivo para o gráfico?
 
-### Solução:
+### Solução
 
+::: {.panel-tabset}
 #### Item a
 
 Tendo em vista o cenário inicial, aquele em que não se remove nenhuma informação a fim de avaliar o comportamento dos dados quanto aos limites de controle, se construiu a Figura 1.
 
 
 ```{r item 1a_1}
-#| echo: false
+#| code-fold: true
 #| warning: false
 #| fig-align: center
-#| fig-width: 7
+#| fig-width: 9
+#| fig-height: 6
 #| error: false
 #| message: false
 
-x=c(9, 11, 14, 9, 16, 11, 10, 12, 5, 10, 9, 11, 7, 9, 22, 11, 8, 11, 9, 13, 9, 7, 9, 8, 12)
+x = c(9, 11, 14, 9, 16, 11, 10, 12, 5, 10, 9, 11, 7, 9, 22, 11, 8, 11, 9, 13, 9, 7, 9, 8, 12)
 p = 0.05
 
 qcc::qcc(x, type = "p", sizes = 200, plot = F, center = p)|>
@@ -89,10 +79,10 @@ qcc::qcc(x, type = "p", sizes = 200, plot = F, center = p)|>
 
 
 ```{r item 1a_2}
-#| echo: false
 #| warning: false
 #| fig-align: center
-#| fig-width: 7
+#| fig-width: 9
+#| fig-height: 6
 #| error: false
 #| message: false
 
@@ -108,25 +98,42 @@ Após a remoção da informação discrepante, o processo permaneceu sob control
 
 #### Item b
 
-Para a obtensão do menor tamanho de amostra se faz necessário a utilização da fórmula do LIC:
+<!-- Para a obtensão do menor tamanho de amostra se faz necessário a utilização da fórmula do LIC: -->
 
 
-O que se deseja é obter um valor de $n$ tal que $LIC > 0$
-
-$$
-LIC = p + 3\sqrt{ \dfrac{p(1-p)}{n}}
-$$
-
-Após as devidas manipulações algébricas, a obtensão do menor tamanho é através da seguinte expressão:
-
+O que se deseja é obter um valor mínimo de $n$ (tamanho da amostra) tal que $LIC > 0$
 
 $$
-n = \frac{p(1-p)}{\bigg(\dfrac{p - LIC}{3}\bigg)^2}
+LIC = p + 3\sqrt{ \dfrac{p(1-p)}{n}} > 0
 $$
+
+Substituindo $p = 0,05$ e realizando os algebrismos necessários, tem-se:
+
+$$
+LIC = 0,05 + 3 \times \sqrt{ \dfrac{0,05(0,95)}{n}} = 0 \Rightarrow \Bigg(\dfrac{-0,05}{3}\Bigg)^2 = \dfrac{0,0475}{n} \Rightarrow
+$$
+
+$$
+\Rightarrow n = \dfrac{0,0475}{\Bigg(\dfrac{-0,05}{3}\Bigg)^2} \therefore n = 171
+$$
+
+
+
+
+Baseado no valor de $n$ tal que $LIC = 0$, conclui-se que $n = 172$  satisfaz o requisito solicitado.
+
+<!-- Com base na fórmula, o valor mínimo de $n$ necessário é $172$. -->
+<!-- Após as devidas manipulações algébricas, a obtensão do menor tamanho é através da seguinte expressão: -->
+
+
+<!-- $$ -->
+<!-- n = \frac{p(1-p)}{\bigg(\dfrac{p - LIC}{3}\bigg)^2} -->
+<!-- $$ -->
+:::
 
 ## Exercício 2
 
-2) (Montgomery, 2013) A maintenance group improves the effectiveness of its repair work by
+(Montgomery, 2013) A maintenance group improves the effectiveness of its repair work by
 monitoring the number of maintenance requests that require a second call to complete the repair.
 Twenty weeks of data are shown in the table below.
 
@@ -135,14 +142,298 @@ b) Design a control chart for controlling future production.
 c) Analyze these data using an average sample size.
 d) Construct a standardized control chart for these data.
 
-2) (Montgomery, 2013) Um grupo de manutenção melhora a eficácia de seu trabalho de reparo ao
-monitorando o número de solicitações de manutenção que requerem uma segunda chamada para concluir o reparo.
+**Tradução**\   
+(Montgomery, 2013) Um grupo de manutenção melhora a eficácia de seu trabalho de reparo monitorando o número de solicitações de manutenção que requerem uma segunda chamada para concluir o reparo.\    
 Vinte semanas de dados são mostradas na tabela abaixo.
 
 a) Encontre os limites de controle de tentativa para este processo.
 b) Projete um gráfico de controle para controlar a produção futura.
 c) Analise esses dados usando um tamanho de amostra médio.
 d) Construa um gráfico de controle padronizado para esses dados.
+
+### Solução
+
+::: {.panel-tabset}
+
+#### Item a
+
+
+```{r q2a}
+#| warning: false
+
+m = 20
+
+n = c(200, rep(250, 3), 200, 200, rep(150, 4), rep(100, 3), rep(200, 5), rep(250, 2))
+
+segunda_vis = c(6, 8, 9, 7, 3, 4, 2, 1, 0, 2, 1, 0, 1, 4, 5, 3, 10, 4, 7, 6)
+
+p_hat_i = segunda_vis/n
+
+p_barra = sum(segunda_vis)/sum(n)
+
+LSC = p_barra + 3*sqrt((p_barra*(1 - p_barra))/n)
+LIC = p_barra - 3*sqrt((p_barra*(1 - p_barra))/n)
+
+```
+
+
+Em virtude de ter-se tamanhos desiguais do n° de solicitações de manutenção é necessário a utilização das médias ponderadas para obtenção da estimativa.
+
+$\bar{p} = \dfrac{\sum_{i = 1}^{m}{d}_i}{\sum_{i = 1}^{m}{n}_i} \approx$ `r scales::number(p_barra, accuracy = 0.0001, big.mark = ".", decimal.mark = ",")`
+
+De posse da proporção média de segundas visitas, calcula-se os limites:
+
+$LSC \approx$ `r scales::number(LSC, accuracy = 0.0001, big.mark = ".", decimal.mark = ",")`   
+
+$LIC \approx$ `r scales::number(LIC, accuracy = 0.0001, big.mark = ".", decimal.mark = ",")`
+
+
+#### Item b
+
+```{r q2b}
+#| code-fold: true
+#| warning: false
+#| fig-align: center
+#| fig-width: 9
+#| fig-height: 6
+#| error: false
+#| message: false
+
+qcc::qcc(segunda_vis, type = "p", sizes = n, plot = F)|>
+  plot(label.limits = c("LIC", "LSC"), xlab = "Amostras",
+       ylab = "Resumo das Estatísticas das Amostras",
+       title = "Figura 3: Gráfico das proporções de manutenções \nque requerem segunda visita para conclusão")
+
+```
+
+
+#### Item c
+
+
+```{r q2c}
+#| warning: false
+#| fig-align: center
+#| fig-width: 9
+#| fig-height: 6
+#| error: false
+#| message: false
+
+qcc::qcc(segunda_vis, type = "p", sizes = mean(n), plot = F)|>
+  plot(label.limits = c("LIC", "LSC"), xlab = "Amostras",
+       ylab = "Resumo das Estatísticas das Amostras",
+       title = "Figura 4: Gráfico da média das amostras das proporções de manutenções \nque requerem segunda visita para conclusão")
+
+```
+
+
+Analisando a Figura 4 com base nas **regras sensibilizantes** se constata a existência de 10 pontos consegutivos abaixo da linha central, caracterizando uma **mudança** na média do processo.
+
+
+#### Item d
+
+```{r}
+#| warning: false
+#| fig-align: center
+#| fig-width: 9
+#| error: false
+#| message: false
+
+
+pse=function(m,n,y) {
+  if (length(n)==1){
+    p=sum(y)/(n*m);LIC=p-3*sqrt(p*(1-p)/n); if (LIC<0) LIC=0
+    LSC=p+3*sqrt(p*(1-p)/n)	
+    time=cbind(seq(1,m),seq(1,m),seq(1,m),seq(1,m))
+    w=cbind(y/n,rep(p,m),rep(LIC,m),rep(LSC,m))
+    par(mfrow=c(1,1))
+    matplot(time,w,type="o",pch=20,main="Gráfico p",
+            col=c("black","blue","red","red"),ylab="p",
+            xlab="Amostras", ylim=c(min(w),max(w)),lty=1,lwd=2)
+  } else {
+    p=sum(y)/sum(n);LIC=numeric(m);LSC=numeric(m);z=numeric(m)
+    for (i in 1:m){
+      LIC[i]=p-3*sqrt(p*(1-p)/n[i]); if (LIC[i]<0) LIC[i]=0
+      LSC[i]=p+3*sqrt(p*(1-p)/n[i])	
+      z[i]=((y[i]/n[i]-p)/sqrt(p*(1-p)/n[i]))
+    }
+    time=cbind(seq(1,m),seq(1,m),seq(1,m),seq(1,m))
+    w1=cbind(y/n,rep(p,m),LIC,LSC)
+    w2=cbind(z,rep(0,m),rep(-3,m),rep(3,m))
+    # par(mfrow=c(1,2))
+    # matplot(time,w1,type="o",pch=20,ylim=c(min(w1),max(w1)),
+    #         col=c("black","blue","red","red"),lty=1,lwd=2,
+    #         main="Gráfico p",ylab="p",xlab="Amostras"	)
+    matplot(time,w2,type="o",pch=20,ylim=c(min(w2),max(w2)),
+            col=c("black","blue","red","red"),xlab="Amostras",
+            main="Gráfico p Padronizado",ylab="z",lty=1,lwd=2)
+  }
+}
+
+pse(m, n, segunda_vis)
+
+```
+
+
+
+:::
+
+## Exercício 3
+
+Num grande hotel, diariamente inspecionam-se 30 quartos quanto a falhas em sua arrumação.
+São apresentados os resultados (contagem de erros na arrumação de quartos) do acompanhamento ao longo de 30 dias.
+
+a) Construa um gráfico do número de defeitos na amostra.
+b) Faça uma análise e interpretação da estabilidade do processo.
+
+### Solução
+
+::: {.panel-tabset}
+#### Item a
+
+
+
+
+
+
+#### Item b
+
+
+::::
+
+## Exercício 4
+
+(Adapted from Montgomery, 2013) The data in the table below are the number of information errors found in customer records in a marketing company database. Five records were sampled each day.
+
+a) Set up a c chart for the total number of errors. Is the process in control?
+b) Set up a Bell-c chart for the total number of errors. Is the process in control?
+c) Discuss the findings from parts (a) and (b). Is the Poisson distribution a good model for these
+data? Is there evidence of this in the data?
+
+
+**Tradução**
+
+(Adaptado de Montgomery, 2013) Os dados da tabela abaixo são o número de erros de informação encontrados em registros de clientes em um banco de dados de uma empresa de marketing. Cinco registros foram amostrados a cada dia.
+
+
+```{r tab4}
+#| warning: false
+#| fig-align: center
+#| fig-width: 9
+#| error: false
+#| message: false
+
+dia = c(1:25)
+
+reg1 = c(8, 11, 1, 3, 3, 6, 8, 4, 1, 15, 1, 6, 7, 2, 6, 2, 11, 5, 6, 2, 7, 4, 4, 15, 2)
+reg2 = c(7, 1, 1, 2, 2, 3, 8, 10, 6, 1, 7, 7, 6, 9, 14, 9, 1, 5, 15, 7, 5, 3, 1, 2, 15)
+reg3 = c(1, 11, 8, 5, 13, 3, 2, 2, 1, 3, 13, 9, 3, 3, 7, 4, 1, 19, 5, 9, 6, 8, 4, 7, 3)
+reg4 = c(11, 2, 2, 1, 6, 3, 1, 6, 3, 2, 5, 3, 3, 8, 1, 2, 3, 1, 6, 2, 14, 1, 20, 10, 11)
+reg5 = c(17, 9, 5, 4, 5, 1, 5, 4, 2, 8, 1, 1, 1, 7, 8, 1, 2, 3, 6, 8, 10, 2, 5, 17, 2)
+
+registros = cbind(dia, reg1, reg2, reg3, reg4, reg5)|> 
+  tibble::as_tibble()
+
+head(registros)|>
+  DT::datatable(
+    caption = "Tabela 4: N° de erros em registros de clientes.",
+    colnames = c("Dia", "Registro 1", "Registro 2", "Registro 3", "Registro 4", "Registro 5"),
+    extensions = 'FixedHeader', 
+    rownames = F,
+    # container = tit,
+    options = list(
+      dom = 't',
+      # fixedHeader = F, 
+      autoWidth = F,
+      columnDefs =
+        list(
+          list(className = 'dt-center', targets = c(0:5)))))
+
+```
+
+\   
+a) Monte um gráfico c para o número total de erros. O processo está sob controle?
+b) Monte um gráfico Bell-c para o número total de erros. O processo está sob controle?
+c) Discuta as conclusões das partes (a) e (b). A distribuição de Poisson é um bom modelo para esses dados? Há evidências disso nos dados?
+
+
+
+### Solução
+
+::: {.panel-tabset}
+
+#### Item a
+
+```{r fig8}
+#| code-fold: true
+#| warning: false
+#| fig-align: center
+#| fig-width: 9
+#| fig-height: 6
+#| error: false
+#| message: false
+
+registros = registros|>
+  dplyr::mutate(
+    total = rowSums(registros[,-1])
+  )
+
+qcc::qcc(registros$total, type = "c", plot = F)|>
+  plot(label.limits = c("LIC", "LSC"), xlab = "Amostras",
+       ylab = "Resumo das Estatísticas das Amostras",
+       title = "Figura 8: Gráfico do total de erros em registros de clientes")
+
+
+```
+
+
+Conforme exposto na Figura 8 é possível constatar que o processo não está sob controle, para tanto foram removidos os totais de observações dos dias 1, 21 e 24 respectivamente (Figura 9), sendo necessário uma análise mais aprofundada para identificar causas de descontrole nos dias identificados.
+
+
+```{r fig9}
+#| code-fold: true
+#| warning: false
+#| fig-align: center
+#| fig-width: 9
+#| fig-height: 6
+#| error: false
+#| message: false
+
+qcc::qcc(registros$total[-c(1, 21, 24)], type = "c", plot = F)|>
+  plot(label.limits = c("LIC", "LSC"), xlab = "Amostras",
+       ylab = "Resumo das Estatísticas das Amostras",
+       title = "Figura 9: Gráfico do total de erros em registros de clientes sem pontos de descontrole")
+
+```
+
+
+
+#### Item b
+
+
+
+
+
+
+
+
+
+#### Item c
+
+
+
+
+
+
+
+
+
+:::
+
+
+## Exercício 5
+
+
+### Solução
 
 
 
